docs Client Code

--- a/docs/basisanforderungen.tex
+++ b/docs/basisanforderungen.tex
@@ -46,7 +46,8 @@ Je nachdem, ob Chats verfügbar sind, bekommt der Benutzer unterschiedliche Antw
 Sind keine Chats vorhanden, wird dies in einer Meldung angezeigt.
 Sind Chats vorhanden, werden sowohl die Chatnamen als auch der/die User/s in diesem Chats angezeigt.
 \paragraph{Funktion: contacts}
-//TODO
+Bei dieser Funktionen werden alle Benutzer angezeigt, die gerade online sind. Nur mit diesen Benutzern kann ein neuer
+Chat erstellt werden, da sonst der Schlüsselaustausch nicht funktioniert.
 \paragraph{Funktion: createchat}
 Diese Funktion beginnt mit einer Aufforderung an den Benutzer, einen Chatnamen einzugeben.
 Danach wird die Anzahl der Teilnehmer in dem Chat abgefragt. Diese muss mindestens 1 betragen.
