--- a/docs/codewalkthrough.tex
+++ b/docs/codewalkthrough.tex
@@ -123,7 +123,7 @@ API-Funktionen
     Hier wird die eigentliche Nachricht und eine ChatId entgegengenommen. Diese werden dann in ein MessagePacket an
     den Server geschickt.
     \lstinputlisting[linerange={163-169}, firstnumber=163]{../src/main/java/vs/chat/client/ClientApiImpl.java}
-    \item Funktion - Verschlüsselung (encryptAES, decyptAES, setKey)
+    \item Funktion - Verschlüsselung (encryptAES, decyptAES, setKey) \\
     Für die symmetrische Verschlüsselung der Nachrichten wird der AES-Algorithmus benutzt. Hierfür wird vor jedem Senden
     die Methode encryptAES und nach jeder empfangener Nachricht decryptAES aufgerufen.\\
     Für die Verschlüsselung wird zunächst der Schlüssel in das richtige Format (SecretKeySpec), durch die Funktion
@@ -132,7 +132,7 @@ API-Funktionen
     Die Entschlüsselung ist fast identisch zur Verschlüsselung. Hier wird die Instanz in dem Entschlüsselungsmodus
     initialisiert.
     \lstinputlisting[linerange={171-207}, firstnumber=171]{../src/main/java/vs/chat/client/ClientApiImpl.java}
-    \item Funktion - Keyfile (addKey, loadKey, deleteKey)
+    \item Funktion - Keyfile (addKey, loadKey, deleteKey) \\
     Mit diesen Funktionen wird auf die Keyfile des Benutzers zugegriffen. Die Keyfile besteht aus PrivateKeyEntitys.
     Der Schlüssel ist die chatId. \\
     Wird ein neuer Key gespeichert, wird eine neue PrivateKeyEntity mit der chatId und dem Schlüssel in der keyfile
@@ -140,9 +140,37 @@ API-Funktionen
     Müssen Nachrichten angezeigt werden, muss der Schlüssel aus der Datei für die chatId ausgelesen werden. loadKey \\
     Sollte ein Chat irgendwann gelöscht werden, kann der die PrivateKeyEntity über die chatID entfernt werden. deleteKey\\
     \lstinputlisting[linerange={209-237}, firstnumber=209]{../src/main/java/vs/chat/client/ClientApiImpl.java}
-    \item Funktion - exit
+    \item Funktion - exit \\
     Bei dieser Methode wird ein LogoutPacket an den Server geschickt. Der User wird hier noch nicht ausgeloggt!!
     \lstinputlisting[linerange={248-252}, firstnumber=248]{../src/main/java/vs/chat/client/ClientApiImpl.java}
+    \item PacketListener-Thread \\
+    Dieser Thread läuft die gesamte Zeit im Hintergrund und nimmt alle (außer LoginSynPacket) Packete, die vom Server
+    an den Client geschickt werden, auf und verarbeitet sie. \\
+    Zuerst wird überprüft, ob es sich um ein BaseEntityBroadcastPacket handelt. Anschließend gibt es verschiedene
+    Möglichkeiten: \\
+    \begin{enumerate}
+        \item Es wurde ein Chat erstellt, in dem der User enthalten ist. Hier wird der Key in der Keyfile abgespeichert
+        und der Chat zu den Chats des Users hinzugefügt.
+        \item Es wurde eine Nachricht an den User geschrieben. Hier wird der Schlüssel aus der Keyfile geladen und die
+        Nachricht damit entschlüsselt.
+        \item Es hat sich ein neuer User angemeldet. Dieser User muss den Usern des Clients hinzugefügt werden, damit auch
+        Chats mit diesem erstellt werden können. (Diffie Hellman funktioniert nur, wenn alle Benutzer online sind.)
+    \end{enumerate}
+    \lstinputlisting[linerange={262-292}, firstnumber=262]{../src/main/java/vs/chat/client/ClientApiImpl.java}
+    Handelt es sich um ein KeyExchangePacket wird ... \\
+    // TODO
+    \lstinputlisting[linerange={294-339}, firstnumber=294]{../src/main/java/vs/chat/client/ClientApiImpl.java}
+    Wird ein GetMessagesResponsePacket erhalten, wurde an den Server zuvor die Anfrage gestellt, dass die Chat Historie
+    geladen werden soll. Dieses Packet enthält alle Nachrichten, die in dem geladen Chat bereits geschrieben wurden.
+    Dafür wird zunächst der passende Schlüssel aus der Keyfile geladen und danach alle Nachrichten entschlüsselt.
+    Diese Nachrichten können dann im Chat angezeigt werden. \\
+    \lstinputlisting[linerange={341-355}, firstnumber=341]{../src/main/java/vs/chat/client/ClientApiImpl.java}
+    Abschließend wird geprüft, ob es ein LogoutSuccessPacket ist. Dieses Packet wird vom Server geschickt, wenn der
+    User die exit Methode aufgerufen hat und erfolgreich vom Server ausgeloggt wurde. Anschließend wird der Client
+    heruntergefahren.\\
+    \lstinputlisting[linerange={356-358}, firstnumber=356]{../src/main/java/vs/chat/client/ClientApiImpl.java}
+
+
 \end{itemize}
 
 
