--- a/docs/docs.tex
+++ b/docs/docs.tex
@@ -9,6 +9,7 @@
 \usepackage{listings}
 
 \usepackage{color}
+\usepackage[colorlinks, linkcolor = black, citecolor = black, filecolor = black, urlcolor = blue]{hyperref} 
 
 %\PassOptionsToPackage{bookmarksopen,
 %pdfstartview={Fit},
@@ -109,12 +110,14 @@
 \begin{document}
 
     \maketitle
+
+    \begin{center}
+      \href{https://github.com/aaronschweig/vs-chat/}{GitHub}
+    \end{center}
+
     \tableofcontents
 
-    % oder clearpage
     \vspace{0.2cm}
-
-    % TODO add information about git
 
     \author{}
     \section{Basisanforderungen}
