--- a/docs/codewalkthrough.tex
+++ b/docs/codewalkthrough.tex
@@ -4,7 +4,7 @@ Bei der Implementierung wird Java 11 eingesetzt.
 \subsection{Server}
 Einstiegspunkt des Servers ist der Serverbootstrapper. Dieser erstellt einen neuen Thread mit einem neuen Server. 
 \lstinputlisting[linerange={7-11}, firstnumber=7]{../src/main/java/vs/chat/server/ServerBootstrapper.java}
-Der Server erstellt die Listener, die die zu empfangenen Pakete behandeln werden. Anschließend werden die Filter erstellt, die bestimmen, ob ein Paket gehandelt oder ignoriert werden soll (z.B. bei rekursiven Broadcasts).
+Der Server erstellt die Listener, die die zu empfangenen Pakete behandeln werden. Anschließend werden die Filter erstellt, die bestimmen, ob ein Paket gehandelt oder ignoriert werden soll (z.\,B. bei rekursiven Broadcasts).
 \lstinputlisting[linerange={64-80}, firstnumber=64]{../src/main/java/vs/chat/server/Server.java}
 
 Die Listener und die Filter werden in einen ServerContext gepackt, der allen Threads geteilt wird.
@@ -14,39 +14,39 @@ Die Listener und die Filter werden in einen ServerContext gepackt, der allen Thr
     \includegraphics[width=\textwidth]{VS-Server-Context.png}
     
     \caption{Server-Context Aufbau}
-    \label{}
 \end{figure}
 
 Sobald der ServerContext instanziiert wird, wird das Warehouse geladen. 
-Zunächst wird versucht die Safe-Datei zu laden, scheitert das Laden wird das Warehouse leer instanziiert.
+Zunächst wird versucht die Safe-Datei zu laden. Scheitert das Laden, wird das Warehouse leer instanziiert.
 \lstinputlisting[linerange={53-64}, firstnumber=53]{../src/main/java/vs/chat/server/warehouse/Warehouse.java}
 
 Das Warehouse hält sämtliche Daten, die persistiert werden müssen (z.\,B. Messages, Chats, Users). Der ServerContext erstellt außerdem den Persister. Der Persister ist ein Thread, der in regelmäßigen Abständen das Warehouse speichert.
 \lstinputlisting[linerange={17-31}, firstnumber=17]{../src/main/java/vs/chat/server/persistence/Persister.java}
 \lstinputlisting[linerange={66-75}, firstnumber=66]{../src/main/java/vs/chat/server/warehouse/Warehouse.java}
-Alle Entitäten und Packete haben eine UUID (Universally Unique Identifier) um diese zu unterscheiden. Verweiße auf andere Entitäten (z.\,B. ein Chat hat mehrere Nutzer) werden Ähnlich zu Fremdschlüsseln in relationalen Datenbanken umgesetzt. Die Entität speichert nur die UUID der Verknüpfung und nicht direkt die Information. Dies erlaubt eine granularere Syncronisation und reduziert mögliche Konfliktsituationen zwischen verschiedenen Nodes. Eingesetzt werden UUIDv4, die pseudozufällig erstellt werden. Dadurch sind zwar theoretisch Konflikte möglich, jedoch in praxis sehr unwahrscheinlich.
+Alle Entitäten und Pakete haben eine UUID (Universally Unique Identifier) um diese zu unterscheiden. Verweise auf andere Entitäten (z.\,B. ein Chat hat mehrere Nutzer) werden ähnlich zu Fremdschlüsseln in relationalen Datenbanken umgesetzt. Die Entität speichert nur die UUID der Verknüpfung und nicht direkt die Information. Dies erlaubt eine feinere Synchronisation und reduziert mögliche Konfliktsituationen zwischen verschiedenen Nodes. Eingesetzt werden UUIDv4, die pseudozufällig erstellt werden. Dadurch sind zwar theoretisch Konflikte möglich, jedoch in Praxis sehr unwahrscheinlich.
 
 Außerdem wird der Broadcaster erstellt, der die Verbindungen zu anderen Nodes hält und empfangene Nachrichten an diese verteilt.
 
 \lstinputlisting[linerange={14-27}, firstnumber=14]{../src/main/java/vs/chat/server/node/NodeBroadcaster.java}
 
 
-Weitere Variablen sind isCloseRequested, die die "endlos" Schleifen aller Threads steuert und connections, welche alle Connections zu Clients, die direkt zu dieser Node verbunden sind, hällt.
+Weitere Variablen sind isCloseRequested, die die "endlos" Schleifen aller Threads steuert und connections, welche alle Connections zu Clients, die direkt zu dieser Node verbunden sind, hält.
 
-Der Nodebroadcaster erstellt bei Instanziierung je node einen eigenen Thread, der sich um das senden und das neu verbinden kümmert.
-Nachrichten, die an eine Node gesendet werden soll werden sollen werden vom Broadcaster in die Queue geschrieben und die NodeConnection wird durch eine Semaphore aufgeweckt. 
-Die NodeConnection versucht eine Nachricht zu senden. Scheitert das senden wird von einer Verbindungstrennung ausgegangen und die Verbindung wird neu verbunden.
+Der Nodebroadcaster erstellt bei Instanziierung je node einen eigenen Thread, der sich um das Senden und das neu verbinden kümmert.
+Nachrichten, die an eine Node gesendet werden soll werden sollen werden vom Broadcaster in die Queue geschrieben und die NodeConnection wird durch einen Semaphor aufgeweckt. 
+Die NodeConnection versucht eine Nachricht zu senden. Scheitert das Senden wird von einer Verbindungstrennung ausgegangen und die Verbindung wird neu verbunden.
+
 \lstinputlisting[linerange={37-50}, firstnumber=37]{../src/main/java/vs/chat/server/node/NodeConnection.java}
-Zusätzlich besitzt die NodeConnection jeweils einen HeartBeat-Thread.Dieser Thread sendet regelmäßig einen Ping um zu testen, ob die Verbindung noch steht.
+Zusätzlich besitzt die NodeConnection jeweils einen HeartBeat-Thread. Dieser Thread sendet regelmäßig einen Ping, um zu testen, ob die Verbindung noch steht.
 \lstinputlisting[linerange={16-25}, firstnumber=16]{../src/main/java/vs/chat/server/node/NodeHeartBeatThread.java}
 
-Nachdem nun alle initialisierungs Vorgänge abgeschlossen sind, kann der ServerSocket erstellt werden und clients akzeptiert werden.
+Nachdem nun alle initialisierungs Vorgänge abgeschlossen sind, kann der ServerSocket erstellt werden und Clients akzeptiert werden.
 Der Hauptserver-Thread ist dabei nur zuständig neue Verbindungen entgegenzunehmen. Für jede Verbindung wird ein ConnectionHandler-Thread erstellt, der sämtliche Nachrichten des Clients verarbeitet.
 \lstinputlisting[linerange={41-60}, firstnumber=41]{../src/main/java/vs/chat/server/Server.java}
 
-Nachrichten zwischen Servern und Clients werden als Packete ausgetauscht. Der Handler versucht dabei ein Packet vom Client zu lesen. Die Filter prüfen nun, ob das Packet gehandelt werden darf (und nach dem handeln werden diese aktualisiert).
+Nachrichten zwischen Servern und Clients werden als Pakete ausgetauscht. Der Handler versucht dabei ein Paket vom Client zu lesen. Die Filter prüfen nun, ob das Paket gehandelt werden darf (und nach dem Verarbeiten dessen werden diese aktualisiert).
 \lstinputlisting[linerange={47-53}, firstnumber=47]{../src/main/java/vs/chat/server/ConnectionHandler.java}
-Anschließend werden die passenden Listener gesucht und diese mit dem Packet aufgerufen.
+Anschließend werden die passenden Listener gesucht und diese mit dem Paket aufgerufen.
 \lstinputlisting[linerange={61-86}, firstnumber=61]{../src/main/java/vs/chat/server/ConnectionHandler.java}
 
 
@@ -54,7 +54,7 @@ Anschließend werden die passenden Listener gesucht und diese mit dem Packet auf
 Filter:
 \begin{itemize}
     \item PacketIdFilter\\
-        Der PacketId-Filter testet, ob ein Packet mit der Id bereits gesehen wurde. Nur wenn die Id neu ist darf das Packet gehandelt werden um rekursive Broadcasts zu vermeiden. Bereits gesehene Pakete werden im Warehouse mit gespeichert. Im seltenen Fall, dass die Node genau zwischen den Listenern und dem aktualisieren der Filter abstürzt kann es vorkommen, dass die gespeicherten Packet-ids nicht konsistenz zum Nutzdatenbestand sind. Hier könnte ein Transaktionsprotokoll implementiert werden. Da aber die Wahrscheinlichkeit dieses Fehlers äußerst gering ist wird hier darauf verzichtet.
+        Der PacketId-Filter testet, ob ein Paket mit der Id bereits gesehen wurde. Nur wenn die Id neu ist darf das Packet gehandelt werden, um rekursive Broadcasts zu vermeiden. Bereits gesehene Pakete werden im Warehouse mitgespeichert. Im seltenen Fall, dass die Node genau zwischen den Listenern und dem Aktualisieren der Filter abstürzt kann es vorkommen, dass die gespeicherten Paket-ids nicht konsistent zum Nutzdatenbestand sind. Hier könnte ein Transaktionsprotokoll implementiert werden. Da aber die Wahrscheinlichkeit dieses Fehlers äußerst gering ist wird hier darauf verzichtet.
         \lstinputlisting[linerange={9-17}, firstnumber=9]{../src/main/java/vs/chat/server/filter/PacketIdFilter.java}
 \end{itemize}
 
@@ -68,7 +68,7 @@ Listener:
         Nachdem ein Chat erstellt wurde müssen die Clients, die an diesem Chat teilnehmen informiert werden. Da jede Node nur die direkt zu ihr verbundenen Clients kennt, muss jede Node prüfen ob sie einen teilnehmenden Client kennt und diesen informieren. Ähnliches gilt für neue Nutzer.
         \lstinputlisting[linerange={33-50}, firstnumber=33]{../src/main/java/vs/chat/server/listener/BaseEntityBroadcastListener.java}
     \item CreateChatListener\\
-        Dieser Listener erstellt Chats anhand von einem CreateChatPacket. Sofern das Packet von einem Nutzer kommt wird ein neuer Chat mit allen Teilnehmern und dem Absender erstellt und weiter verteilt.
+        Dieser Listener erstellt Chats anhand von einem CreateChatPacket. Sofern das Paket von einem Nutzer kommt, wird ein neuer Chat mit allen Teilnehmern und dem Absender erstellt und weiter verteilt.
         \lstinputlisting[linerange={23-41}, firstnumber=23]{../src/main/java/vs/chat/server/listener/CreateChatListener.java}
     \item GetMessagesListener\\
         Mithilfe eines GetMessagePackets können alle Nachrichten abgefragt werden, die in einem Chat gesendet wurden.
@@ -77,52 +77,38 @@ Listener:
         Dieser Listener leitet KeyExchangePackete von einem Client an andere Clients weiter (gegebenenfalls über andere Nodes).
         \lstinputlisting[linerange={15-27}, firstnumber=15]{../src/main/java/vs/chat/server/listener/KeyExchangeListener.java}
     \item LoginListener\\
-        Der LoginListener kümmert sich um die Authentifizierung eines Clients. Er prüft ob ein Nutzer besteht und falls ja wird das Passwort geprüft.
-        Außerdem wird die Information der Connection gesetzt, zu welchem Client sie verbunden ist um ein gezieltes Senden zu ermöglichen (wie z.B. beim KeyExchange oder bei Messages).
+        Der LoginListener kümmert sich um die Authentifizierung eines Clients. Er prüft, ob ein Nutzer besteht und falls ja wird das Passwort geprüft.
+        Außerdem wird die Information der Connection gesetzt, zu welchem Client sie verbunden ist, um ein gezieltes Senden zu ermöglichen (wie z.\,B. beim KeyExchange oder bei Messages).
         \lstinputlisting[linerange={25-34}, firstnumber=25]{../src/main/java/vs/chat/server/listener/LoginListener.java}
-        Existiert noch kein Nutzer wird ein passender Nutzer erstellt.
+        Existiert noch kein Nutzer, wird ein passender Nutzer erstellt.
         \lstinputlisting[linerange={37-56}, firstnumber=37]{../src/main/java/vs/chat/server/listener/LoginListener.java}
-        Anschließend wird der Client auf den neuesten Stand gebracht indem ein LoginSyncPacket an den Client gesendet wird. Dieses enthält die User id des aktuellen Nutzers, die anderen registrierten Nutzer und alle Chats, an dem der Client teilnimmt.
+        Anschließend wird der Client auf den neuesten Stand gebracht indem ein LoginSyncPacket an den Client gesendet wird. Dieses enthält die User-Id des aktuellen Nutzers, die anderen registrierten Nutzer und alle Chats, an dem der Client teilnimmt.
         \lstinputlisting[linerange={59-65}, firstnumber=59]{../src/main/java/vs/chat/server/listener/LoginListener.java}
     \item MessageListener\\
-        Messages, die vom Client an einen Chat gesendet werden werden von diesem Listener bearbeitet. Der Listener kümmert sich dabei auch um die Verteilung der Nachrichten an alle anderen Chatteilnehmer.
+        Messages, die vom Client an einen Chat gesendet werden, werden von diesem Listener bearbeitet. Der Listener kümmert sich dabei auch um die Verteilung der Nachrichten an alle anderen Chatteilnehmer.
         \lstinputlisting[linerange={24-44}, firstnumber=24]{../src/main/java/vs/chat/server/listener/MessageListener.java}
     \item NodeSyncListener\\
-        Wie in Fehlerbehandlung beschrieben müssen Nodes auf dem neuesten Stand gezogen werden, falls diese ausgefallen waren. Bei einem Reconnect wird ein NodeSyncPacket mit den aktuellen Informationen an die neu startende Node gesendet. Dieser Listener verarbeitet diese Packete indem er prüft ob eine Änderung vorliegt und wenn ja diese übernimmt und broadcastet. 
+        Wie in Fehlerbehandlung beschrieben müssen Nodes auf dem neuesten Stand gezogen werden, falls diese ausgefallen waren. Bei einem Reconnect wird ein NodeSyncPacket mit den aktuellen Informationen an die neu startende Node gesendet. Dieser Listener verarbeitet diese Pakete indem er prüft ob eine Änderung vorliegt und wenn ja diese übernimmt und broadcastet. 
         \lstinputlisting[linerange={16-34}, firstnumber=16]{../src/main/java/vs/chat/server/listener/NodeSyncListener.java}
         Theoretisch kann es sein, dass ein Nutzer sich anmeldet bevor die Node ihre Synchronisation abgeschlossen hat. Dieser Fehlerfall wird aber nicht weiter behandelt, da die Synchronisationszeit und die Ausfallwahrscheinlichkeit einer Node als zu gering eingestuft wird.
 \end{itemize}
-
-
-Sollen hier andere Packete auch erkärt werden? Also Logout, GetMessageResponsePacket, NoOp, ...?
 
 \subsection{Client}
 API-Funktionen
 \begin{itemize}
     \item Funktion - login\\
-    Bei der Funktion login werden er Benutzername und des Passwort des Benutzers entgegengenommen. Diese werden als
-    neues LoginPacket an den Server geschickt. Dort wird unter anderem überprüft, ob es sich um einen neuen Benutzer
-    handelt (Es wird ein neues angelegt) oder es ein bereits existierender Benutzer ist (Passwort wird überprüft).
-    An dieser Stelle wartet der Client auf ein LoginSyncPacket (Login war erfolgreich). Danach werden die
-    Attribute (userId, chats, contacts) abgespeichert. Für die Verschlüsselung wird auch noch die Keyfile geladen,
-    in der die Schlüssel der eigenen Chats gespeichert sind. Sollte es noch keine Keyfile geben, wird eine neue
-    erzeugt. Diese File ist wie die warehouse File aufgebaut (hier wird über die ChatId, die Schlüssel geladen).
-    Abschließend wird aus den beiden hardgecodeden public Keys noch ein private Key generiert, der später für den
-    Diffie Hellman Schlüsseltausch notwendig ist.
+    Bei der Funktion login werden er Benutzername und das Passwort des Benutzers entgegengenommen. Diese werden als neues LoginPacket an den Server geschickt. Dort wird unter anderem überprüft, ob es sich um einen neuen Benutzer handelt (Es wird ein neues angelegt) oder es ein bereits existierender Benutzer ist (Passwort wird überprüft). An dieser Stelle wartet der Client auf ein LoginSyncPacket (Login war erfolgreich). Danach werden die Attribute (userId, chats, contacts) abgespeichert. Für die Verschlüsselung wird auch noch die Keyfile geladen, in der die Schlüssel der eigenen Chats gespeichert sind. Sollte es noch keine Keyfile geben, wird eine neue erzeugt. Diese Datei ist ähnlich wie die Warehouse-Datei aufgebaut (hier wird über die ChatId, die Schlüssel geladen). Abschließend wird aus den beiden hardgecodeden public Keys noch ein private Key generiert, der später für den    Diffie Hellman Schlüsseltausch notwendig ist.
     \lstinputlisting[linerange={119-149}, firstnumber=58]{../src/main/java/vs/chat/client/ClientApiImpl.java}
     \item Funktion -generatePrivateKey\\
-    Mit dieser Funktion wird ein 128 private Key aus den beiden public Keys n und g generiert. Dieser ist für die
-    Verschlüsselung wichtig.
+    Mit dieser Funktion wird ein 128 private Key aus den beiden public Keys n und g generiert. Der private Key wird für die Verschlüsselung verwendet.
     \lstinputlisting[linerange={159-167}, firstnumber=95]{../src/main/java/vs/chat/client/ClientApiImpl.java}
     \item Funktion - exchangeKeys\\
     Um den Diffie-Hellman Schlüsseltausch zu starten muss die exchangeKeys Methode vom Client aufgerufen werden.
     Dabei erstellt die Methode das erste KeyExchangePacket, welches mit den erforderlichen Informationen
-    ausgestattet wird. Nachdem das Packet gesendet wurde haben die Teilnehmer 10 Sekunden Zeit um den 
-    Schlüsseltausch durchzuführen, wenn dies innherhalb der angegeben Zeit nicht geschieht gehen wir von
-    einem Fehler aus und es wird die Error Handling Methode onTimeout aufgerufen.
+    ausgestattet wird. Nachdem das Paket gesendet wurde, haben die Teilnehmer 10 Sekunden Zeit, um den Schlüsseltausch durchzuführen. Wenn dies innerhalb der angegebenen Zeit nicht geschieht gehen wir von einem Fehler ausgegangen und es wird die Error Handling Methode onTimeout aufgerufen.
     \lstinputlisting[linerange={195-216}, firstnumber=154]{../src/main/java/vs/chat/client/ClientApiImpl.java}
     \item Funktion - createChat\\
-    Für einen neuen Chats werden 2 Parameter benötigt: Name des Chats und Liste mit Usern. Um einen neuen Chat zu
+    Für einen neuen Chat werden 2 Parameter benötigt: Name des Chats und Liste mit Usern. Um einen neuen Chat zu
     erstellen, wird ein CreateChatPacket mit dem Chatnamen und einem Array der UserIds an den Server geschickt.
     \lstinputlisting[linerange={218-225}, firstnumber=154]{../src/main/java/vs/chat/client/ClientApiImpl.java}
     \item Funktion - sendMessage\\
@@ -134,26 +120,33 @@ API-Funktionen
     die Methode encryptAES und nach jeder empfangener Nachricht decryptAES aufgerufen.\\
     Für die Verschlüsselung wird zunächst der Schlüssel in das richtige Format (SecretKeySpec), durch die Funktion
     setKey gebracht. Anschließend wird eine Instanz der Klasse Cipher erzeugt und mit dem Verschlüsselungsmodus und
-    dem Key initalisiert. Abschließend wird der eigentlich Text verschlüsselt und in einem String zurückgegeben. \\
+    dem Key initialisiert. Abschließend wird der eigentlich Text verschlüsselt und in einem String zurückgegeben. \\
     Die Entschlüsselung ist fast identisch zur Verschlüsselung. Hier wird die Instanz in dem Entschlüsselungsmodus
     initialisiert.
     \lstinputlisting[linerange={235-255}, firstnumber=171]{../src/main/java/vs/chat/client/ClientApiImpl.java}
-    \item Funktion - Keyfile (addKey, loadKey, deleteKey) \\
+    \item Funktion - Keyfile (addKey, loadKey, deleteKey) \
+    addKey\\
     Mit diesen Funktionen wird auf die Keyfile des Benutzers zugegriffen. Die Keyfile besteht aus PrivateKeyEntitys.
-    Der Schlüssel ist die chatId. \\
+    Der Schlüssel ist die chatId.
     Wird ein neuer Key gespeichert, wird eine neue PrivateKeyEntity mit der chatId und dem Schlüssel in der keyfile
-    abgespeichert. addKey\\
-    Müssen Nachrichten angezeigt werden, muss der Schlüssel aus der Datei für die chatId ausgelesen werden. loadKey \\
-    Sollte ein Chat irgendwann gelöscht werden, kann der die PrivateKeyEntity über die chatID entfernt werden. deleteKey\\
+    abgespeichert.
+    
+    addKey\\
+    Müssen Nachrichten angezeigt werden, muss der Schlüssel aus der Datei für die chatId ausgelesen werden.
+    
+    loadKey \\
+    Sollte ein Chat irgendwann gelöscht werden, kann der die PrivateKeyEntity über die chatID entfernt werden. 
+    
+    deleteKey\\
+    //TODO hier fehlt noch text + das listing ist verschoben
     \lstinputlisting[linerange={257-301}, firstnumber=209]{../src/main/java/vs/chat/client/ClientApiImpl.java}
     \item Funktion - exit \\
-    Bei dieser Methode wird ein LogoutPacket an den Server geschickt. Der User wird hier noch nicht ausgeloggt!!
+    Bei dieser Methode wird ein LogoutPacket an den Server geschickt. Der User wird hier noch nicht ausgeloggt!
     \lstinputlisting[linerange={312-316}, firstnumber=248]{../src/main/java/vs/chat/client/ClientApiImpl.java}
     \item PacketListener-Thread \\
     Dieser Thread läuft die gesamte Zeit im Hintergrund und nimmt alle (außer LoginSynPacket) Packete, die vom Server
-    an den Client geschickt werden, auf und verarbeitet sie. \\
-    Zuerst wird überprüft, ob es sich um ein BaseEntityBroadcastPacket handelt. Anschließend gibt es verschiedene
-    Möglichkeiten: \\
+    an den Client geschickt werden, auf und verarbeitet sie.
+    Zuerst wird überprüft, ob es sich um ein BaseEntityBroadcastPacket handelt. Anschließend gibt es verschiedene Möglichkeiten: \\
     \begin{enumerate}
         \item Es wurde ein Chat erstellt, in dem der User enthalten ist. Hier wird der Key in der Keyfile abgespeichert
         und der Chat zu den Chats des Users hinzugefügt.
@@ -163,16 +156,16 @@ API-Funktionen
         Chats mit diesem erstellt werden können. (Diffie Hellman funktioniert nur, wenn alle Benutzer online sind.)
     \end{enumerate}
     \lstinputlisting[linerange={326-356}, firstnumber=262]{../src/main/java/vs/chat/client/ClientApiImpl.java}
-    Handelt es sich um ein KeyExchangePacket wird überprüft ob der Schlüsseltausch schon fertig ist,
+    Handelt es sich um ein KeyExchangePacket, wird überprüft, ob der Schlüsseltausch schon fertig ist,
     falls ja erstellt der Initiator des Schlüsseltauschs den Chat, falls nicht werden die nächsten
-    Teilschlüssel berechnet und weitergeschickt \\
+    Teilschlüssel berechnet und weitergeschickt.\\
     \lstinputlisting[linerange={358-403}, firstnumber=294]{../src/main/java/vs/chat/client/ClientApiImpl.java}
     Wird ein GetMessagesResponsePacket erhalten, wurde an den Server zuvor die Anfrage gestellt, dass die Chat Historie
-    geladen werden soll. Dieses Packet enthält alle Nachrichten, die in dem geladen Chat bereits geschrieben wurden.
+    geladen werden soll. Dieses Packet enthält alle Nachrichten, die in dem geladenen Chat bereits geschrieben wurden.
     Dafür wird zunächst der passende Schlüssel aus der Keyfile geladen und danach alle Nachrichten entschlüsselt.
-    Diese Nachrichten können dann im Chat angezeigt werden. \\
+    Diese Nachrichten können dann im Chat angezeigt werden.\\
     \lstinputlisting[linerange={405-419}, firstnumber=341]{../src/main/java/vs/chat/client/ClientApiImpl.java}
-    Abschließend wird geprüft, ob es ein LogoutSuccessPacket ist. Dieses Packet wird vom Server geschickt, wenn der
+    Abschließend wird geprüft, ob es ein LogoutSuccessPacket ist. Dieses Paket wird vom Server geschickt, wenn der
     User die exit Methode aufgerufen hat und erfolgreich vom Server ausgeloggt wurde. Anschließend wird der Client
     heruntergefahren.\\
     \lstinputlisting[linerange={430-438}, firstnumber=356]{../src/main/java/vs/chat/client/ClientApiImpl.java}
